--- a/firebase.json
+++ b/firebase.json
@@ -14,6 +14,10 @@
           "serviceId" : "redwood-blog-container",
           "region": "us-central1"
         }
+      },
+      {
+        "source": "**",
+        "destination": "/index.html"
       }
     ],
     "cleanUrls": true
