--- a/web/package.json
+++ b/web/package.json
@@ -4,13 +4,14 @@
   "version": "0.0.0",
   "dependencies": {
     "@gouch/to-title-case": "^2.2.1",
-    "@redwoodjs/auth": "0.18.0",
+    "@redwoodjs/auth": "^0.18.0",
     "@redwoodjs/forms": "^0.18.0",
     "@redwoodjs/router": "0.18.0",
     "@redwoodjs/web": "0.18.0",
     "date-fns": "^2.16.1",
     "error-overlay-webpack-plugin": "^0.4.1",
     "filestack-react": "^3.1.0",
+    "firebase": "^7.20.0",
     "html-truncate": "^1.2.2",
     "markdown-it": "^10.0.0",
     "netlify-identity-widget": "^1.6.0",
