--- a/cloudbuild-web.yaml
+++ b/cloudbuild-web.yaml
@@ -10,6 +10,15 @@ steps:
   entrypoint: 'yarn'
   dir: './'
   args: ['redwood', 'build', 'web']
+  env:
+    - USE_AUTHENTICATION=true
+    - FIREBASE_API_KEY=${_FIREBASE_API_KEY}
+    - FIREBASE_AUTH_DOMAIN=${_FIREBASE_AUTH_DOMAIN}
+    - FIREBASE_DATABASE_URL=${_FIREBASE_DATABASE_URL}
+    - FIREBASE_PROJECT_ID=${_FIREBASE_PROJECT_ID}
+    - FIREBASE_STORAGE_BUCKET=${_FIREBASE_STORAGE_BUCKET}
+    - FIREBASE_MESSAGING_SENDER_ID=${_FIREBASE_MESSAGING_SENDER_ID}
+    - FIREBASE_APP_ID=${_FIREBASE_APP_ID}
 
   # Install Firebase tools
 - name: 'node'
