--- a/redwood.toml
+++ b/redwood.toml
@@ -8,7 +8,7 @@
 [web]
   port = 8910
   apiProxyPath = ""
-  includeEnvironmentVariables = ['FILESTACK_API_KEY', 'USE_AUTHENTICATION']
+  includeEnvironmentVariables = ['USE_AUTHENTICATION', 'FIREBASE_API_KEY'. 'FIREBASE_AUTH_DOMAIN', 'FIREBASE_DATABASE_URL', 'FIREBASE_PROJECT_ID', 'FIREBASE_STORAGE_BUCKET', 'FIREBASE_MESSAGING_SENDER_ID', 'FIREBASE_APP_ID']
 [api]
   port = 8911
 [browser]
